chore: Fix netlify

--- a/docs/pages/docs/how-to-guides/grafana.mdx
+++ b/docs/pages/docs/how-to-guides/grafana.mdx
@@ -4,7 +4,7 @@ This guide will show you how to import Grafana dashboards to Guance Cloud.
 
 ## Training
 
-import Button from '../../../components/Button'
+import Button from '../../../components/button'
 
 <Button
     type="primary"
